deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill
  namespace: magic
  labels:
    name: bill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bill
  template:
    metadata:
      labels:
        app: bill
    spec:
      imagePullSecrets:
        - name: ccr
      containers:
        - name: app
          image: ccr.ccs.tencentyun.com/wwww/bill:latest
          imagePullPolicy: Always
          command:
            - ./app
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 512Mi
