deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bill
  namespace: magic
  labels:
    name: bill
spec:
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8080
  selector:
    app: bill
  type: ClusterIP
